# mcv-indicator-screen

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
components/bsp/: AGENTS.md  CLAUDE.md  CMakeLists.txt  idf_component.yml
components/bsp/include/: bsp_display.h  bsp_indicator.h  bsp_touch.h
components/bsp/src/: bsp_button.c  bsp_display.c  bsp_i2c.c  bsp_init.c  bsp_internal.h  bsp_io_expander.c  bsp_touch.c
components/cobs/: CMakeLists.txt  LICENSE
components/cobs/include/: cobs.h
components/cobs/src/: cobs.c
docs/: architecture.md  hardware-reference.md  lora-downlink-issue.md  lora-lcd-coexist-debug-notes.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lv_port.c  lv_port.h  main.c
main/app/: AGENTS.md  CLAUDE.md  app_inspect.c  app_inspect.h  app_manager.c  app_manager.h
main/app/fonts/: app_fonts.c  app_fonts.h  font_cn_14.c  font_cn_20.c  font_unit_14.c  font_unit_32.c
main/app/pages/: page_control.c  page_control.h  page_hello.c  page_hello.h  page_lora.c  page_lora.h  page_sensor.c  page_sensor.h  page_settings.c  page_settings.h
main/app/services/: indicator_hal.h  svc_alerts.c  svc_alerts.h  svc_console.c  svc_console.h  svc_ha_mqtt.c  svc_ha_mqtt.h  svc_lorawan.cpp  svc_lorawan.h  svc_rp2040.c  svc_rp2040.h  svc_storage.c  svc_storage.h  svc_wifi.c  svc_wifi.h
rp2040/: platformio.ini
rp2040/include/: protocol.h
rp2040/src/: main.cpp
scripts/: dev.sh
simulator/: CMakeLists.txt  lv_conf.h  main.c  preview.sh  sim_platform.c
simulator/shims/: esp_err.h  esp_log.h
simulator/shims/freertos/: portmacro.h
